Dao,pojo,services,springBoot配置

--- a/src/html/test.html
+++ b/src/html/test.html
@@ -4,7 +4,7 @@
         <img src="/2020gw/images/slogan2.jpg" alt="一样的教育，不一样的品质" class="slogan"/>
         <div class="city" title="传智播客IT培训校区">
             <h3>全国校区</h3>
-            <div class="city_in">
+            <div class="city_in" id="test1">
                 <span class="city_nav">&nbsp;</span>
                 <div class="city_con" style="display: none;">
                     <!-- <strong></strong> -->
@@ -15,9 +15,9 @@
                         </li>
                         <li att="abc2"><a href="http://sh.itcast.cn" target="_blank"><span class="imgbox"><img src="/2020gw/images/city/sh_cur.jpg"/></span><span class="s_name">上海</span></a>
                         </li>
-                        <li><a href="http://gz.itcast.cn" target="_blank"><span class="imgbox"><img src="/2020gw/images/city/gz_cur.jpg"/></span><span class="s_name">广州</span></a>
+                        <li abc1="abc1"><a href="http://gz.itcast.cn" target="_blank"><span class="imgbox"><img src="/2020gw/images/city/gz_cur.jpg"/></span><span class="s_name">广州</span></a>
                         </li>
-                        <li><a href="http://sz.itcast.cn" target="_blank"><span class="imgbox"><img src="/2020gw/images/city/sz_cur.jpg"/></span><span class="s_name">深圳</span></a>
+                        <li abc1="abc1" class="s_name"><a href="http://sz.itcast.cn" target="_blank"><span class="imgbox"><img src="/2020gw/images/city/sz_cur.jpg"/></span><span class="s_name">深圳</span></a>
                         </li>
                         <li><a href="http://wh.itcast.cn" target="_blank"><span class="imgbox"><img src="/2020gw/images/city/wh_cur.jpg"/></span><span class="s_name">武汉</span></a>
                         </li>
